# anscer-robotics-assignment

./: .gitignore  README.md  create_postgres_table.py  docker-compose.yaml
docker/dev/: Dockerfile  ros_entrypoint.sh
ws_ros/src/anscer_multimap_navigator/: CMakeLists.txt  package.xml
ws_ros/src/anscer_multimap_navigator/action/: MultimapNavigate.action
ws_ros/src/anscer_multimap_navigator/include/anscer_multimap_navigator/: db_interface.h  dynamic_map_changer.h  navigator_action_server.h
ws_ros/src/anscer_multimap_navigator/launch/: anscer_multimap_navigation.launch
ws_ros/src/anscer_multimap_navigator/launch/include/: common.launch.xml
ws_ros/src/anscer_multimap_navigator/src/: db_interface.cpp  dynamic_map_changer.cpp  get_robot_map_location.cpp  navigator_action_client.cpp  navigator_action_server.cpp  wormhole_location_saver.cpp
ws_ros/src/anscer_multimap_navigator/srv/: SwitchMap.srv
ws_ros/src/ar100/: .gitignore  LICENSE  README.md
ws_ros/src/ar100/anscer_description/: CMakeLists.txt  package.xml
ws_ros/src/ar100/anscer_description/config/: anscer_urdf.yaml
ws_ros/src/ar100/anscer_description/launch/: anscer_description.launch
ws_ros/src/ar100/anscer_description/meshes/: amr_chassis.dae
ws_ros/src/ar100/anscer_description/urdf/: anscer_description.xacro  anscer_description_gazebo.xacro  anscer_description_macros.xacro  anscer_description_materials.xacro  anscer_description_params.xacro
ws_ros/src/ar100/anscer_gazebo/: CMakeLists.txt  package.xml
ws_ros/src/ar100/anscer_gazebo/launch/: anscer_gazebo.launch
ws_ros/src/ar100/anscer_gazebo/worlds/: anscer.world
ws_ros/src/ar100/anscer_gazebo/worlds/models/: model.config  world_model.sdf
ws_ros/src/ar100/anscer_navigation/: CMakeLists.txt  package.xml
ws_ros/src/ar100/anscer_navigation/launch/: anscer_navigation.launch
ws_ros/src/ar100/anscer_navigation/launch/include/: common.launch.xml
ws_ros/src/ar100/anscer_navigation/launch/localization/: amcl_localization.launch
ws_ros/src/ar100/anscer_navigation/launch/navigation/: dwa_navigation.launch
ws_ros/src/ar100/anscer_navigation/maps/: map.pgm  map.yaml  room1.pgm  room1.yaml  room2.pgm  room2.yaml
ws_ros/src/ar100/anscer_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ws_ros/src/ar100/anscer_navigation/rviz/: anscer_navigation.rviz
ws_ros/src/ar100/anscer_slam/: CMakeLists.txt  package.xml
ws_ros/src/ar100/anscer_slam/config/: gmapping_params.yaml
ws_ros/src/ar100/anscer_slam/launch/: anscer_slam.launch
ws_ros/src/ar100/anscer_slam/launch/include/: gmapping_slam.launch.xml
ws_ros/src/ar100/anscer_teleop/: CMakeLists.txt  package.xml  setup.py
ws_ros/src/ar100/anscer_teleop/launch/: anscer_teleop_key.launch
ws_ros/src/ar100/anscer_teleop/nodes/: anscer_teleop_key
ws_ros/src/ar100/start_anscer/: CMakeLists.txt  package.xml
ws_ros/src/ar100/start_anscer/launch/: start_anscer.launch
ws_ros/src/ar100/start_anscer/launch/include/: anscer_bringup_simulation.launch.xml  common.launch.xml
ws_ros/src/sql_database/: CMakeLists.txt
