<?xml version="1.0"?>
<package format="2">
  <name>anscer_description</name>
  <version>0.1.0</version>
  <description>The anscer_description package</description>
  <maintainer email="anscer@anscer.com">anscer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  
</package>
