<?xml version="1.0"?>
<package format="2">
  <name>anscer_gazebo</name>
  <version>0.1.0</version>
  <description>The anscer_gazebo package</description>
  <maintainer email="anscer@anscer.com">anscer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>anscer_description</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>