<?xml version="1.0"?>
<package format="2">
  <name>anscer_navigation</name>
  <version>0.1.0</version>
  <description>The anscer_navigation package</description>
  <maintainer email="anscer@anscer.com">anscer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
