<?xml version="1.0"?>
<package format="2">
  <name>anscer_teleop</name>
  <version>0.1.0</version>
  <description>Provides teleoperation using keyboard for AMR.</description>
  <maintainer email="anscer@anscer.com">anscer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>