<?xml version="1.0"?>
<package format="2">
  <name>start_anscer</name>
  <version>0.1.0</version>
  <description>The start_anscer package</description>
  <maintainer email="anscer@anscer.com">anscer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
